--- a/index.html
+++ b/index.html
@@ -14,20 +14,18 @@
     header {
       position: sticky;
       top: 0;
-      margin-top: -15px;
-      font-size: 25px;
+      margin-top: 0px;
+      font-size: 20px;
       font-weight: bold;
       background-color: #fff;
-      color: #333;
-      height: 50px;
-      box-shadow: 1px 1px 5px rgba(0,0,0,0.1);
+      color: #26a9a3;
+      height: 30px;
       padding: 10px;
     }
 
     main {
       padding: 10px;
-      margin-top: 0px;
-      background-color: #fff;
+      margin-top: 10px;
     }
 
     .container {
@@ -39,8 +37,9 @@
 
     #unicode-grid {
       display: grid;
+      margin-top: -15px;
       grid-template-columns: repeat(auto-fill, minmax(40px, 1fr));
-      border: 1px solid #ccc;
+      gap: 5px;
     }
 
     .char-cell {
@@ -48,20 +47,24 @@
       justify-content: center;
       align-items: center;
       height: 40px;
-      font-size: 18px;
-      border-right: 1px solid #ccc;
-      border-bottom: 1px solid #ccc;
+      color: black;
+      font-size: 25px;
+       border: 1px solid #26a9a3;
+       border-radius: 5px;
     }
 
     .char-cell:last-child {
       border-right: none;
     }
+    
+    
   </style>
 </head>
 <body>
   <div class="container">
     <header>Unicode Grid<br>
-      <h4 style="color: #333; font-size: 11px;">Tommy Website | V0.1.0 ©</h4>
+      <h4 style="color: #26a9a3; font-size: 11px; margin-top: 0;">Tommy Website | V0.1.0 ©</h4>
+
     </header>
     <main>
       <div id="unicode-grid"></div>
@@ -250,34 +253,6 @@ Combining Half Marks<br><hr>
 􀀀 􀀁 􀀂 􀀃 􀀄 􀀅 􀀆 􀀇 􀀈 􀀉 􀀊 􀀋 􀀌 􀀍 􀀎 􀀏 􀀐 􀀑 􀀒 􀀓 􀀔 􀀕 􀀖 􀀗 􀀘 􀀙 􀀚 􀀛 􀀜 􀀝 􀀞 􀀟 􀀠 􀀡 􀀢 􀀣 􀀤 􀀥 􀀦 􀀧 􀀨 􀀩 􀀪 􀀫 􀀬 􀀭 􀀮 􀀯 􀀰 􀀱 􀀲 􀀳 􀀴 􀀵 􀀶 􀀷 􀀸 􀀹 􀀺 􀀻 􀀼 􀀽 􀀾 􀀿 􀁀 􀁁 􀁂 􀁃 􀁄 􀁅 􀁆 􀁇 􀁈 􀁉 􀁊 􀁋 􀁌 􀁍 􀁎 􀁏 􀁐 􀁑 􀁒 􀁓 􀁔 􀁕 􀁖 􀁗 􀁘 􀁙 􀁚 􀁛 􀁜 􀁝 􀁞 􀁟 􀁠 􀁡 􀁢 􀁣 􀁤 􀁥 􀁦 􀁧 􀁨 􀁩 􀁪 􀁫 􀁬 􀁭 􀁮 􀁯 􀁰 􀁱 􀁲 􀁳 􀁴 􀁵 􀁶 􀁷 􀁸 􀁹 􀁺 􀁻 􀁼 􀁽 􀁾 􀁿
 </p>
   </main>
-<script>
-  const p = document.getElementById('unicode-text');
-  const text = p.textContent.trim();
-  const chars = [...text]; // Pecah semua karakter
-  p.innerHTML = ''; // Kosongkan isi paragraf
-
-  chars.forEach(char => {
-    const span = document.createElement('span');
-    span.textContent = char;
-
-    if (char !== ' ') {
-      span.className = 'char-box';
-
-      // Tambahkan event klik untuk salin dan fokus
-      span.addEventListener('click', () => {
-        navigator.clipboard.writeText(char);
-
-        document.querySelectorAll('.char-box').forEach(el => el.classList.remove('active'));
-        span.classList.add('active');
-      });
-
-    } else {
-      span.innerHTML = '&nbsp;';
-    }
-
-    p.appendChild(span);
-  });
-</script>
 
   <script>
     const unicodeText = `
@@ -291,14 +266,15 @@ Combining Half Marks<br><hr>
 	𔐀 𔐁 𔐂 𔐃 𔐄 𔐅 𔐆 𔐇 𔐈 𔐉 𔐊 𔐋 𔐌 𔐍 𔐎 𔐏 𔐐 𔐑 𔐒 𔐓 𔐔 𔐕 𔐖 𔐗 𔐘 𔐙 𔐚 𔐛 𔐜 𔐝 𔐞 𔐟 𔐠 𔐡 𔐢 𔐣 𔐤 𔐥 𔐦 𔐧 𔐨 𔐩 𔐪 𔐫 𔐬 𔐭 𔐮 𔐯 𔐰 𔐱 𔐲 𔐳 𔐴 𔐵 𔐶 𔐷 𔐸 𔐹 𔐺 𔐻 𔐼 𔐽 𔐾 𔐿 𔑀 𔑁 𔑂 𔑃 𔑄 𔑅 𔑆 𔑇 𔑈 𔑉 𔑊 𔑋 𔑌 𔑍 𔑎 𔑏 𔑐 𔑑 𔑒 𔑓 𔑔 𔑕 𔑖 𔑗 𔑘 𔑙 𔑚 𔑛 𔑜 𔑝 𔑞 𔑟 𔑠 𔑡 𔑢 𔑣 𔑤 𔑥 𔑦 𔑧 𔑨 𔑩 𔑪 𔑫 𔑬 𔑭 𔑮 𔑯 𔑰 𔑱 𔑲 𔑳 𔑴 𔑵 𔑶 𔑷 𔑸 𔑹 𔑺 𔑻 𔑼 𔑽 𔑾 𔑿 𔒀 𔒁 𔒂 𔒃 𔒄 𔒅 𔒆 𔒇 𔒈 𔒉 𔒊 𔒋 𔒌 𔒍 𔒎 𔒏 𔒐 𔒑 𔒒 𔒓 𔒔 𔒕 𔒖 𔒗 𔒘 𔒙 𔒚 𔒛 𔒜 𔒝 𔒞 𔒟 𔒠 𔒡 𔒢 𔒣 𔒤 𔒥 𔒦 𔒧 𔒨 𔒩 𔒪 𔒫 𔒬 𔒭 𔒮 𔒯 𔒰 𔒱 𔒲 𔒳 𔒴 𔒵 𔒶 𔒷 𔒸 𔒹 𔒺 𔒻 𔒼 𔒽 𔒾 𔒿 𔓀 𔓁 𔓂 𔓃 𔓄 𔓅 𔓆 𔓇 𔓈 𔓉 𔓊 𔓋 𔓌 𔓍 𔓎 𔓏 𔓐 𔓑 𔓒 𔓓 𔓔 𔓕 𔓖 𔓗 𔓘 𔓙 𔓚 𔓛 𔓜 𔓝 𔓞 𔓟 𔓠 𔓡 𔓢 𔓣 𔓤 𔓥 𔓦 𔓧 𔓨 𔓩 𔓪 𔓫 𔓬 𔓭 𔓮 𔓯 𔓰 𔓱 𔓲 𔓳 𔓴 𔓵 𔓶 𔓷 𔓸 𔓹 𔓺 𔓻 𔓼 𔓽 𔓾 𔓿 𔔀 𔔁 𔔂 𔔃 𔔄 𔔅 𔔆 𔔇 𔔈 𔔉 𔔊 𔔋 𔔌 𔔍 𔔎 𔔏 𔔐 𔔑 𔔒 𔔓 𔔔 𔔕 𔔖 𔔗 𔔘 𔔙 𔔚 𔔛 𔔜 𔔝 𔔞 𔔟 𔔠 𔔡 𔔢 𔔣 𔔤 𔔥 𔔦 𔔧 𔔨 𔔩 𔔪 𔔫 𔔬 𔔭 𔔮 𔔯 𔔰 𔔱 𔔲 𔔳 𔔴 𔔵 𔔶 𔔷 𔔸 𔔹 𔔺 𔔻 𔔼 𔔽 𔔾 𔔿 𔕀 𔕁 𔕂 𔕃 𔕄 𔕅 𔕆 𔕇 𔕈 𔕉 𔕊 𔕋 𔕌 𔕍 𔕎 𔕏 𔕐 𔕑 𔕒 𔕓 𔕔 𔕕 𔕖 𔕗 𔕘 𔕙 𔕚 𔕛 𔕜 𔕝 𔕞 𔕟 𔕠 𔕡 𔕢 𔕣 𔕤 𔕥 𔕦 𔕧 𔕨 𔕩 𔕪 𔕫 𔕬 𔕭 𔕮 𔕯 𔕰 𔕱 𔕲 𔕳 𔕴 𔕵 𔕶 𔕷 𔕸 𔕹 𔕺 𔕻 𔕼 𔕽 𔕾 𔕿 𔖀 𔖁 𔖂 𔖃 𔖄 𔖅 𔖆 𔖇 𔖈 𔖉 𔖊 𔖋 𔖌 𔖍 𔖎 𔖏 𔖐 𔖑 𔖒 𔖓 𔖔 𔖕 𔖖 𔖗 𔖘 𔖙 𔖚 𔖛 𔖜 𔖝 𔖞 𔖟 𔖠 𔖡 𔖢 𔖣 𔖤 𔖥 𔖦 𔖧 𔖨 𔖩 𔖪 𔖫 𔖬 𔖭 𔖮 𔖯 𔖰 𔖱 𔖲 𔖳 𔖴 𔖵 𔖶 𔖷 𔖸 𔖹 𔖺 𔖻 𔖼 𔖽 𔖾 𔖿 𔗀 𔗁 𔗂 𔗃 𔗄 𔗅 𔗆 𔗇 𔗈 𔗉 𔗊 𔗋 𔗌 𔗍 𔗎 𔗏 𔗐 𔗑 𔗒 𔗓 𔗔 𔗕 𔗖 𔗗 𔗘 𔗙 𔗚 𔗛 𔗜 𔗝 𔗞 𔗟 𔗠 𔗡 𔗢 𔗣 𔗤 𔗥 𔗦 𔗧 𔗨 𔗩 𔗪 𔗫 𔗬 𔗭 𔗮 𔗯 𔗰 𔗱 𔗲 𔗳 𔗴 𔗵 𔗶 𔗷 𔗸 𔗹 𔗺 𔗻 𔗼 𔗽 𔗾 𔗿 𔘀 𔘁 𔘂 𔘃 𔘄 𔘅 𔘆 𔘇 𔘈 𔘉 𔘊 𔘋 𔘌 𔘍 𔘎 𔘏 𔘐 𔘑 𔘒 𔘓 𔘔 𔘕 𔘖 𔘗 𔘘 𔘙 𔘚 𔘛 𔘜 𔘝 𔘞 𔘟 𔘠 𔘡 𔘢 𔘣 𔘤 𔘥 𔘦 𔘧 𔘨 𔘩 𔘪 𔘫 𔘬 𔘭 𔘮 𔘯 𔘰 𔘱 𔘲 𔘳 𔘴 𔘵 𔘶 𔘷 𔘸 𔘹 𔘺 𔘻 𔘼 𔘽 𔘾 𔘿 𔙀 𔙁 𔙂 𔙃 𔙄 𔙅 𔙆
     `.trim().split(/\s+/);
 
-    const grid = document.getElementById("unicode-grid");
+const grid = document.getElementById("unicode-grid");
 
-    unicodeText.forEach(char => {
-      const cell = document.createElement("div");
-      cell.className = "char-cell";
-      cell.textContent = char;
-      grid.appendChild(cell);
-    });
+unicodeText.forEach(char => {
+  const cell = document.createElement("span");
+  cell.className = "char-cell";
+  cell.textContent = char;
+  grid.appendChild(cell);
+});
+
   </script>
 </body>
 </html>
