--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -8,7 +9,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #f9f9f9;
+      background: #444;
     }
 
     header {
@@ -17,8 +18,8 @@
       margin-top: 0px;
       font-size: 20px;
       font-weight: bold;
-      background-color: #fff;
-      color: #26a9a3;
+      background-color: #333;
+      color: #fff;
       height: 30px;
       padding: 10px;
     }
@@ -46,11 +47,12 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 40px;
-      color: black;
+      height: 50px;
+      background: #222;
+      color: #fff;
       font-size: 25px;
-       border: 1px solid #26a9a3;
-       border-radius: 5px;
+       border: 0.5px solid #26a9a3;
+       border-radius: 4px;
     }
 
     .char-cell:last-child {
@@ -63,7 +65,7 @@
 <body>
   <div class="container">
     <header>Unicode Grid<br>
-      <h4 style="color: #26a9a3; font-size: 11px; margin-top: 0;">Tommy Website | V0.1.0 ©</h4>
+      <h4 style="color: #00d343; font-size: 11px; margin-top: 0;">Tommy Website | V0.1.0 ©</h4>
 
     </header>
     <main>
